[gd_scene load_steps=2 format=3 uid="uid://bar4vfadwag2y"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_m5rgg"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m5rgg")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 456.0
offset_right = 390.0
offset_bottom = 557.0
scale = Vector2(5, 5)

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game	"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 109.0
offset_right = 70.0
offset_bottom = 132.0

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
